load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "raw_jwt",
    srcs = ["raw_jwt.cc"],
    hdrs = ["raw_jwt.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//tink/jwt/internal:json_util",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:optional",
        "@protobuf",
    ],
)

cc_library(
    name = "verified_jwt",
    srcs = ["verified_jwt.cc"],
    hdrs = ["verified_jwt.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":raw_jwt",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "jwt_validator",
    srcs = ["jwt_validator.cc"],
    hdrs = ["jwt_validator.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":raw_jwt",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_mac",
    hdrs = ["jwt_mac.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_validator",
        ":raw_jwt",
        ":verified_jwt",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "jwt_public_key_sign",
    hdrs = ["jwt_public_key_sign.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":raw_jwt",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "jwt_public_key_verify",
    hdrs = ["jwt_public_key_verify.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_validator",
        ":verified_jwt",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "jwt_mac_config",
    srcs = ["jwt_mac_config.cc"],
    hdrs = ["jwt_mac_config.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_hmac_proto_serialization",
        "//proto:config_cc_proto",
        "//tink:registry",
        "//tink/config:tink_fips",
        "//tink/jwt/internal:jwt_hmac_key_manager",
        "//tink/jwt/internal:jwt_mac_wrapper",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
    ],
)

cc_library(
    name = "jwt_key_templates",
    srcs = ["jwt_key_templates.cc"],
    hdrs = ["jwt_key_templates.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:common_cc_proto",
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:jwt_hmac_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:statusor",
        "@boringssl//:crypto",
    ],
)

cc_library(
    name = "jwk_set_converter",
    srcs = ["jwk_set_converter.cc"],
    hdrs = ["jwk_set_converter.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:binary_keyset_writer",
        "//tink:keyset_handle",
        "//tink/internal:ec_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/jwt/internal:json_util",
        "//tink/jwt/internal:jwt_format",
        "//tink/subtle:common_enums",
        "//tink/util:keyset_util",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
        "@protobuf",
    ],
)

cc_library(
    name = "jwt_signature_config",
    srcs = ["jwt_signature_config.cc"],
    hdrs = ["jwt_signature_config.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_ecdsa_proto_serialization",
        ":jwt_rsa_ssa_pkcs1_proto_serialization",
        ":jwt_rsa_ssa_pss_proto_serialization",
        "//proto:config_cc_proto",
        "//tink:registry",
        "//tink/config:tink_fips",
        "//tink/jwt/internal:jwt_ecdsa_sign_key_manager",
        "//tink/jwt/internal:jwt_ecdsa_verify_key_manager",
        "//tink/jwt/internal:jwt_public_key_sign_wrapper",
        "//tink/jwt/internal:jwt_public_key_verify_wrapper",
        "//tink/jwt/internal:jwt_rsa_ssa_pkcs1_sign_key_manager",
        "//tink/jwt/internal:jwt_rsa_ssa_pkcs1_verify_key_manager",
        "//tink/jwt/internal:jwt_rsa_ssa_pss_sign_key_manager",
        "//tink/jwt/internal:jwt_rsa_ssa_pss_verify_key_manager",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
    ],
)

cc_library(
    name = "jwt_mac_parameters",
    hdrs = ["jwt_mac_parameters.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = ["//tink:parameters"],
)

cc_library(
    name = "jwt_mac_key",
    hdrs = ["jwt_mac_key.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_mac_parameters",
        "//tink:key",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_hmac_parameters",
    srcs = ["jwt_hmac_parameters.cc"],
    hdrs = ["jwt_hmac_parameters.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_mac_parameters",
        "//tink:parameters",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "jwt_hmac_key",
    srcs = ["jwt_hmac_key.cc"],
    hdrs = ["jwt_hmac_key.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_hmac_parameters",
        ":jwt_mac_key",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_data",
        "//tink/internal:endian",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_hmac_proto_serialization",
    hdrs = ["jwt_hmac_proto_serialization.h"],
    include_prefix = "tink/jwt",
    deps = [
        "//tink/internal:mutable_serialization_registry",
        "//tink/jwt/internal:jwt_hmac_proto_serialization_impl",
        "@abseil-cpp//absl/status",
    ],
)

cc_library(
    name = "jwt_signature_parameters",
    hdrs = ["jwt_signature_parameters.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = ["//tink:parameters"],
)

cc_library(
    name = "jwt_signature_public_key",
    hdrs = ["jwt_signature_public_key.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_signature_parameters",
        "//tink:key",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_signature_private_key",
    hdrs = ["jwt_signature_private_key.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_signature_parameters",
        ":jwt_signature_public_key",
        "//tink:key",
        "//tink:private_key",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_ecdsa_parameters",
    srcs = ["jwt_ecdsa_parameters.cc"],
    hdrs = ["jwt_ecdsa_parameters.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_signature_parameters",
        "//tink:parameters",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "jwt_ecdsa_public_key",
    srcs = ["jwt_ecdsa_public_key.cc"],
    hdrs = ["jwt_ecdsa_public_key.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_signature_public_key",
        "//tink:ec_point",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink/internal:ec_util",
        "//tink/internal:endian",
        "//tink/internal:ssl_unique_ptr",
        "//tink/subtle:common_enums",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
    ],
)

cc_library(
    name = "jwt_ecdsa_private_key",
    srcs = ["jwt_ecdsa_private_key.cc"],
    hdrs = ["jwt_ecdsa_private_key.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_public_key",
        ":jwt_signature_private_key",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink:secret_data",
        "//tink/internal:bn_util",
        "//tink/internal:call_with_core_dump_protection",
        "//tink/internal:ec_util",
        "//tink/internal:err_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/internal:util",
        "//tink/subtle:common_enums",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
    ],
)

cc_library(
    name = "jwt_ecdsa_proto_serialization",
    hdrs = ["jwt_ecdsa_proto_serialization.h"],
    include_prefix = "tink/jwt",
    deps = [
        "//tink/internal:mutable_serialization_registry",
        "//tink/jwt/internal:jwt_ecdsa_proto_serialization_impl",
        "@abseil-cpp//absl/status",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pkcs1_parameters",
    srcs = ["jwt_rsa_ssa_pkcs1_parameters.cc"],
    hdrs = ["jwt_rsa_ssa_pkcs1_parameters.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_signature_parameters",
        "//tink:big_integer",
        "//tink:parameters",
        "//tink/internal:bn_util",
        "//tink/internal:rsa_util",
        "//tink/internal:ssl_unique_ptr",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pkcs1_public_key",
    srcs = ["jwt_rsa_ssa_pkcs1_public_key.cc"],
    hdrs = ["jwt_rsa_ssa_pkcs1_public_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_signature_public_key",
        "//tink:big_integer",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink/internal:endian",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pkcs1_private_key",
    srcs = ["jwt_rsa_ssa_pkcs1_private_key.cc"],
    hdrs = ["jwt_rsa_ssa_pkcs1_private_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pkcs1_public_key",
        ":jwt_signature_private_key",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink:secret_data",
        "//tink/internal:rsa_util",
        "//tink/internal:ssl_unique_ptr",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pkcs1_proto_serialization",
    hdrs = ["jwt_rsa_ssa_pkcs1_proto_serialization.h"],
    include_prefix = "tink/jwt",
    deps = [
        "//tink/internal:mutable_serialization_registry",
        "//tink/jwt/internal:jwt_rsa_ssa_pkcs1_proto_serialization_impl",
        "@abseil-cpp//absl/status",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pss_parameters",
    srcs = ["jwt_rsa_ssa_pss_parameters.cc"],
    hdrs = ["jwt_rsa_ssa_pss_parameters.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_signature_parameters",
        "//tink:big_integer",
        "//tink:parameters",
        "//tink/internal:bn_util",
        "//tink/internal:rsa_util",
        "//tink/internal:ssl_unique_ptr",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pss_public_key",
    srcs = ["jwt_rsa_ssa_pss_public_key.cc"],
    hdrs = ["jwt_rsa_ssa_pss_public_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_signature_public_key",
        "//tink:big_integer",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink/internal:endian",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pss_private_key",
    srcs = ["jwt_rsa_ssa_pss_private_key.cc"],
    hdrs = ["jwt_rsa_ssa_pss_private_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pss_public_key",
        ":jwt_signature_private_key",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/internal:rsa_util",
        "//tink/internal:ssl_unique_ptr",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pss_proto_serialization",
    hdrs = ["jwt_rsa_ssa_pss_proto_serialization.h"],
    include_prefix = "tink/jwt",
    deps = [
        "//tink/internal:mutable_serialization_registry",
        "//tink/jwt/internal:jwt_rsa_ssa_pss_proto_serialization_impl",
        "@abseil-cpp//absl/status",
    ],
)

cc_library(
    name = "jwt_mac_config_v0",
    srcs = ["jwt_mac_config_v0.cc"],
    hdrs = ["jwt_mac_config_v0.h"],
    include_prefix = "tink/jwt",
    deps = [
        "//tink:configuration",
        "//tink/jwt/internal:jwt_mac_config_v0",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_library(
    name = "jwt_mac_key_gen_config_v0",
    srcs = ["jwt_mac_key_gen_config_v0.cc"],
    hdrs = ["jwt_mac_key_gen_config_v0.h"],
    include_prefix = "tink/jwt",
    deps = [
        "//tink:key_gen_configuration",
        "//tink/jwt/internal:jwt_mac_key_gen_config_v0",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_library(
    name = "jwt_signature_config_v0",
    srcs = ["jwt_signature_config_v0.cc"],
    hdrs = ["jwt_signature_config_v0.h"],
    include_prefix = "tink/jwt",
    deps = [
        "//tink:configuration",
        "//tink/jwt/internal:jwt_signature_config_v0",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_library(
    name = "jwt_signature_key_gen_config_v0",
    srcs = ["jwt_signature_key_gen_config_v0.cc"],
    hdrs = ["jwt_signature_key_gen_config_v0.h"],
    include_prefix = "tink/jwt",
    deps = [
        "//tink:key_gen_configuration",
        "//tink/jwt/internal:jwt_signature_key_gen_config_v0",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

# tests

cc_test(
    name = "raw_jwt_test",
    size = "small",
    srcs = ["raw_jwt_test.cc"],
    deps = [
        ":raw_jwt",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "verified_jwt_test",
    size = "small",
    srcs = ["verified_jwt_test.cc"],
    deps = [
        ":jwt_validator",
        ":raw_jwt",
        ":verified_jwt",
        "//proto:common_cc_proto",
        "//tink:mac",
        "//tink/jwt/internal:jwt_mac_impl",
        "//tink/jwt/internal:jwt_mac_internal",
        "//tink/subtle:hmac_boringssl",
        "//tink/util:enums",
        "//tink/util:secret_data",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:optional",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_validator_test",
    size = "small",
    srcs = ["jwt_validator_test.cc"],
    deps = [
        ":jwt_validator",
        ":raw_jwt",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_key_templates_test",
    srcs = ["jwt_key_templates_test.cc"],
    deps = [
        ":jwt_key_templates",
        ":jwt_mac",
        ":jwt_mac_config",
        ":jwt_public_key_sign",
        ":jwt_public_key_verify",
        ":jwt_signature_config",
        ":jwt_validator",
        ":raw_jwt",
        ":verified_jwt",
        "//proto:tink_cc_proto",
        "//tink:keyset_handle",
        "//tink/config:global_registry",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwk_set_converter_test",
    srcs = ["jwk_set_converter_test.cc"],
    deps = [
        ":jwk_set_converter",
        ":jwt_public_key_sign",
        ":jwt_public_key_verify",
        ":jwt_signature_config",
        ":jwt_validator",
        ":raw_jwt",
        ":verified_jwt",
        "//proto:ecdsa_cc_proto",
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:cleartext_keyset_handle",
        "//tink:keyset_handle",
        "//tink:keyset_reader",
        "//tink/config:global_registry",
        "//tink/json:json_keyset_reader",
        "//tink/jwt/internal:json_util",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
        "@protobuf",
    ],
)

cc_test(
    name = "jwt_mac_config_test",
    srcs = ["jwt_mac_config_test.cc"],
    tags = ["fips"],
    deps = [
        ":jwt_hmac_key",
        ":jwt_hmac_parameters",
        ":jwt_key_templates",
        ":jwt_mac_config",
        "//proto:jwt_hmac_cc_proto",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:keyset_handle",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:registry",
        "//tink:restricted_data",
        "//tink/config:global_registry",
        "//tink/internal:fips_utils",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/internal:tink_proto_structs",
        "//tink/subtle:random",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_signature_config_test",
    srcs = ["jwt_signature_config_test.cc"],
    tags = ["fips"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_private_key",
        ":jwt_ecdsa_public_key",
        ":jwt_key_templates",
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_private_key",
        ":jwt_rsa_ssa_pkcs1_public_key",
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_private_key",
        ":jwt_rsa_ssa_pss_public_key",
        ":jwt_signature_config",
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:keyset_handle",
        "//tink:partial_key_access",
        "//tink:registry",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/config:global_registry",
        "//tink/internal:ec_util",
        "//tink/internal:fips_utils",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:tink_proto_structs",
        "//tink/subtle:common_enums",
        "//tink/util:secret_data",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_hmac_parameters_test",
    srcs = ["jwt_hmac_parameters_test.cc"],
    deps = [
        ":jwt_hmac_parameters",
        "//tink:parameters",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_hmac_key_test",
    srcs = ["jwt_hmac_key_test.cc"],
    deps = [
        ":jwt_hmac_key",
        ":jwt_hmac_parameters",
        "//tink:key",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:optional",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_hmac_proto_serialization_test",
    srcs = ["jwt_hmac_proto_serialization_test.cc"],
    deps = [
        ":jwt_hmac_key",
        ":jwt_hmac_parameters",
        ":jwt_hmac_proto_serialization",
        "//proto:common_cc_proto",
        "//proto:jwt_hmac_cc_proto",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/internal:tink_proto_structs",
        "//tink/subtle:random",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_ecdsa_parameters_test",
    srcs = ["jwt_ecdsa_parameters_test.cc"],
    deps = [
        ":jwt_ecdsa_parameters",
        "//tink:parameters",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_ecdsa_public_key_test",
    srcs = ["jwt_ecdsa_public_key_test.cc"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_public_key",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:key",
        "//tink:partial_key_access",
        "//tink/internal:ec_util",
        "//tink/subtle:common_enums",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:optional",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_ecdsa_private_key_test",
    srcs = ["jwt_ecdsa_private_key_test.cc"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_private_key",
        ":jwt_ecdsa_public_key",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/internal:ec_util",
        "//tink/subtle:common_enums",
        "//tink/util:secret_data",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_ecdsa_proto_serialization_test",
    srcs = ["jwt_ecdsa_proto_serialization_test.cc"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_private_key",
        ":jwt_ecdsa_proto_serialization",
        ":jwt_ecdsa_public_key",
        "//proto:common_cc_proto",
        "//proto:jwt_ecdsa_cc_proto",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/internal:ec_util",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/internal:tink_proto_structs",
        "//tink/subtle:common_enums",
        "//tink/util:secret_data",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pkcs1_parameters_test",
    srcs = ["jwt_rsa_ssa_pkcs1_parameters_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        "//tink:big_integer",
        "//tink:parameters",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pkcs1_public_key_test",
    srcs = ["jwt_rsa_ssa_pkcs1_public_key_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_public_key",
        "//tink:big_integer",
        "//tink:key",
        "//tink:partial_key_access",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pkcs1_private_key_test",
    srcs = ["jwt_rsa_ssa_pkcs1_private_key_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_private_key",
        ":jwt_rsa_ssa_pkcs1_public_key",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pkcs1_proto_serialization_test",
    srcs = ["jwt_rsa_ssa_pkcs1_proto_serialization_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_private_key",
        ":jwt_rsa_ssa_pkcs1_proto_serialization",
        ":jwt_rsa_ssa_pkcs1_public_key",
        "//proto:common_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/internal:bn_util",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/internal:ssl_unique_ptr",
        "//tink/internal:tink_proto_structs",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pss_parameters_test",
    srcs = ["jwt_rsa_ssa_pss_parameters_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        "//tink:big_integer",
        "//tink:parameters",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pss_public_key_test",
    srcs = ["jwt_rsa_ssa_pss_public_key_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_public_key",
        "//tink:big_integer",
        "//tink:key",
        "//tink:partial_key_access",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pss_private_key_test",
    srcs = ["jwt_rsa_ssa_pss_private_key_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_private_key",
        ":jwt_rsa_ssa_pss_public_key",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pss_proto_serialization_test",
    srcs = ["jwt_rsa_ssa_pss_proto_serialization_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_private_key",
        ":jwt_rsa_ssa_pss_proto_serialization",
        ":jwt_rsa_ssa_pss_public_key",
        "//proto:common_cc_proto",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/internal:bn_util",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/internal:ssl_unique_ptr",
        "//tink/internal:tink_proto_structs",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/types:optional",
        "@boringssl//:crypto",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_mac_config_v0_test",
    srcs = ["jwt_mac_config_v0_test.cc"],
    deps = [
        ":jwt_key_templates",
        ":jwt_mac",
        ":jwt_mac_config_v0",
        ":jwt_mac_key_gen_config_v0",
        ":jwt_validator",
        ":raw_jwt",
        "//tink:keyset_handle",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_signature_config_v0_test",
    srcs = ["jwt_signature_config_v0_test.cc"],
    deps = [
        ":jwt_key_templates",
        ":jwt_public_key_sign",
        ":jwt_public_key_verify",
        ":jwt_signature_config_v0",
        ":jwt_signature_key_gen_config_v0",
        ":jwt_validator",
        ":raw_jwt",
        "//tink:keyset_handle",
        "//tink/util:test_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
    ],
)
