package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "kem_decapsulate",
    hdrs = ["kem_decapsulate.h"],
    include_prefix = "tink/kem",
    visibility = ["//visibility:public"],
    deps = [
        "//tink:keyset_handle",
        "//tink/util:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "kem_encapsulate",
    hdrs = ["kem_encapsulate.h"],
    include_prefix = "tink/kem",
    visibility = ["//visibility:public"],
    deps = [
        "//tink:keyset_handle",
        "//tink/util:statusor",
    ],
)
