package(
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

cc_library(
    name = "keyset_deriver",
    hdrs = ["keyset_deriver.h"],
    include_prefix = "tink/keyderivation",
    visibility = ["//visibility:public"],
    deps = [
        "//tink:keyset_handle",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "keyset_deriver_wrapper",
    srcs = ["keyset_deriver_wrapper.cc"],
    hdrs = ["keyset_deriver_wrapper.h"],
    include_prefix = "tink/keyderivation",
    deps = [
        ":keyset_deriver",
        "//proto:tink_cc_proto",
        "//tink:cleartext_keyset_handle",
        "//tink:keyset_handle",
        "//tink:primitive_set",
        "//tink:primitive_wrapper",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
    ],
)

cc_library(
    name = "key_derivation_config",
    srcs = ["key_derivation_config.cc"],
    hdrs = ["key_derivation_config.h"],
    include_prefix = "tink/keyderivation",
    visibility = ["//visibility:public"],
    deps = [
        ":keyset_deriver_wrapper",
        "//tink:registry",
        "//tink/config:tink_fips",
        "//tink/keyderivation/internal:prf_based_deriver_key_manager",
        "//tink/prf:hkdf_prf_key_manager",
        "//tink/util:status",
        "@com_google_absl//absl/memory",
    ],
)

cc_library(
    name = "key_derivation_key_templates",
    srcs = ["key_derivation_key_templates.cc"],
    hdrs = ["key_derivation_key_templates.h"],
    include_prefix = "tink/keyderivation",
    visibility = ["//visibility:public"],
    deps = [
        ":keyset_deriver",
        "//proto:prf_based_deriver_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:keyset_handle",
        "//tink/config:global_registry",
        "//tink/keyderivation/internal:prf_based_deriver_key_manager",
        "//tink/util:statusor",
    ],
)

cc_library(
    name = "key_derivation_key",
    hdrs = ["key_derivation_key.h"],
    include_prefix = "tink/keyderivation",
    visibility = ["//visibility:public"],
    deps = [
        ":key_derivation_parameters",
        "//tink:key",
    ],
)

cc_library(
    name = "key_derivation_parameters",
    hdrs = ["key_derivation_parameters.h"],
    include_prefix = "tink/keyderivation",
    visibility = ["//visibility:public"],
    deps = ["//tink:parameters"],
)

# tests

cc_test(
    name = "keyset_deriver_wrapper_test",
    srcs = ["keyset_deriver_wrapper_test.cc"],
    deps = [
        ":keyset_deriver",
        ":keyset_deriver_wrapper",
        "//proto:tink_cc_proto",
        "//tink:cleartext_keyset_handle",
        "//tink:keyset_handle",
        "//tink:primitive_set",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "key_derivation_config_test",
    srcs = ["key_derivation_config_test.cc"],
    deps = [
        ":key_derivation_config",
        ":key_derivation_key_templates",
        ":keyset_deriver",
        "//proto:tink_cc_proto",
        "//tink:aead",
        "//tink:keyset_handle",
        "//tink:registry",
        "//tink/aead:aead_config",
        "//tink/aead:aead_key_templates",
        "//tink/aead:aes_gcm_key_manager",
        "//tink/config:global_registry",
        "//tink/prf:prf_key_templates",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/memory",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "key_derivation_key_templates_test",
    srcs = ["key_derivation_key_templates_test.cc"],
    deps = [
        ":key_derivation_key_templates",
        ":keyset_deriver_wrapper",
        "//proto:prf_based_deriver_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:registry",
        "//tink/aead:aead_key_templates",
        "//tink/aead:aes_gcm_key_manager",
        "//tink/keyderivation/internal:prf_based_deriver_key_manager",
        "//tink/prf:hkdf_prf_key_manager",
        "//tink/prf:prf_key_templates",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "keyset_deriver_test",
    srcs = ["keyset_deriver_test.cc"],
    deps = [
        ":keyset_deriver",
        ":keyset_deriver_wrapper",
        "//proto:hkdf_prf_cc_proto",
        "//proto:prf_based_deriver_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:keyset_handle",
        "//tink:partial_key_access",
        "//tink:partial_key_access_token",
        "//tink:registry",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/aead:aead_config",
        "//tink/aead:aes_ctr_hmac_aead_key",
        "//tink/aead:aes_ctr_hmac_aead_parameters",
        "//tink/aead:aes_ctr_hmac_aead_proto_serialization",
        "//tink/aead:aes_gcm_key",
        "//tink/aead:aes_gcm_parameters",
        "//tink/aead:aes_gcm_proto_serialization",
        "//tink/aead:xchacha20_poly1305_key",
        "//tink/aead:xchacha20_poly1305_parameters",
        "//tink/aead:xchacha20_poly1305_proto_serialization",
        "//tink/config:global_registry",
        "//tink/daead:aes_siv_key",
        "//tink/daead:aes_siv_parameters",
        "//tink/daead:aes_siv_proto_serialization",
        "//tink/internal:ec_util",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/internal:ssl_util",
        "//tink/keyderivation/internal:prf_based_deriver_key_manager",
        "//tink/mac:hmac_key",
        "//tink/mac:hmac_parameters",
        "//tink/mac:hmac_proto_serialization",
        "//tink/signature:ecdsa_parameters",
        "//tink/signature:ecdsa_private_key",
        "//tink/signature:ecdsa_proto_serialization",
        "//tink/signature:ecdsa_public_key",
        "//tink/signature:ed25519_parameters",
        "//tink/signature:ed25519_private_key",
        "//tink/signature:ed25519_proto_serialization",
        "//tink/signature:ed25519_public_key",
        "//tink/subtle:common_enums",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_keyset_handle",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)
